@@ -1,6 +1,10 @@
 package task1;
 
 import java.util.ArrayList;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public class Main {
     static int[][] graph = { { 0, 1 }, { 0, 4 }, { 0, 5 }, { 1, 0 }, { 1, 2 }, { 1, 6 }, { 2, 1 }, { 2, 3 }, { 2, 7 },
@@ -9,13 +13,13 @@ public class Main {
             { 9, 7 } };
 
     static void getPath(ArrayList<Integer> partialPath, int destination) {
-        if (partialPath.get(partialPath.size() - 1) == destination) {
+        if (partialPath.getLast() == destination) {
             System.out.println(partialPath);
             return;
         }
 
         // se verifica nodurile pentru a evita ciclarea in graf
-        int lastNodeInPath = partialPath.get(partialPath.size() - 1);
+        int lastNodeInPath = partialPath.getLast();
         for (int[] ints : graph) {
             if (ints[0] == lastNodeInPath) {
                 if (partialPath.contains(ints[1]))
@@ -31,6 +35,13 @@ public class Main {
         ArrayList<Integer> partialPath = new ArrayList<>();
         // se vor calcula toate caile de la nodul 0 la nodul 3 in cadrul grafului
         partialPath.add(0);
-        getPath(partialPath, 3);
+
+        // getPath(partialPath, 3);
+        // System.out.println("\n\n");
+
+        AtomicInteger inQueue = new AtomicInteger(0);
+        ExecutorService tpe = Executors.newFixedThreadPool(4);
+        inQueue.incrementAndGet();
+        tpe.submit(new MyRunnable(partialPath, tpe, inQueue, 3));
     }
 }
